fix: 공지사항 에러처리 수정